# Bevy_stroke_renderer

./: Cargo.toml  README.md
src/: diagnostics.rs  effects.rs  input.rs  lib.rs  model.rs  tiles.rs
src/Docs/: README.md  gpu-paint-architecture.md  gpu-paint-roadmap.md  gpu-paint-validation.md  pen-latency-mode.md  phase3-document-format.md
src/model/: persistence.rs
src/render/: mod.rs  tiles.rs
src/shaders/: stroke_composite.wgsl  stroke_coverage.wgsl  stroke_geometry.wgsl  stroke_layer_resolve.wgsl  tile_composite.wgsl  tile_raster.wgsl
